Material IconMorph : Fixed Display styles by adding visibility instance.

--- a/src/main/resources/gwt/material/design/addins/public/css/morph.css
+++ b/src/main/resources/gwt/material/design/addins/public/css/morph.css
@@ -30,9 +30,11 @@
 }
 .anim-container.morphed .source {
     opacity: 1;
+    visibility: visible;
 }
 .anim-container.morphed .target {
     opacity: 0;
+    visibility: hidden;
 }
 
 .anim-container.tiny {
